# vectometry

./: CHANGELOG.md  LICENSE  LICENSE.txt  README.md  build.bat  build.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  statistics.py
src/vectometry/: __init__.py
src/vectometry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vector_geometry.egg-info/: PKG-INFO  SOURCES.txt
src/vector_operations.egg-info/: PKG-INFO  SOURCES.txt
src/vectors/: __init__.py
tests/: example.py
vector_geometry.egg-info/: PKG-INFO  SOURCES.txt
