[metadata]
name = vector-geometry-informaticfreak
version = 1.0.0
author = InformaticFreak
author_email = yt.informaticfreak@gmail.com
description = Defines a vector and point object with vector operations as functions and with integration of built-in operators.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InformaticFreak/vector-geometry
project_urls =
    Bug Tracker = https://github.com/InformaticFreak/vector-geometry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src